--- a/examples/template.j2
+++ b/examples/template.j2
@@ -7,7 +7,7 @@ this is my float: {{my_float}}
 {% endfor %}
 
 {% for key, value in my_obj %}
-  {{key}}. {{value}}
+  {{key}}: {{value}}
 {% endfor %}
 
 {{ bash(command='ls -la | tr -s " "') }}
@@ -15,4 +15,4 @@ this is my float: {{my_float}}
 1. {{ my_string | sed(expression="s|this||g") | bash(command="wc")}}
 2. {{ my_string | bash(command='sed -e "s|this||g" | wc')}}
 
-{{bash(command="echo $var1 $var2", var1="hola", var2="mundo")}}
+{{bash(command="echo $var1 $var2", var1="hello", var2="world")}}
